[package]
name = "myrient-dl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "myrient-dl"
path = "src/main.rs"

[[bin]]
name = "fetch_sizes"
path = "src/bin/fetch_sizes.rs"

[dependencies]
eframe      = { version = "0.27", features = ["default"] }
egui        = "0.27"
reqwest     = { version = "0.12", features = ["blocking"] }
scraper     = "0.19"
shellexpand = "3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rfd         = "0.14"
md5         = "0.7"
nix         = { version = "0.27", features = ["fs"] }
once_cell   = "1"
rayon       = "1"

[profile.release]
opt-level = 3
lto       = true
strip     = true
