[package]
name = "myrient-dl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "myrient-dl"
path = "src/main.rs"

[[bin]]
name = "myrient-dl-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "fetch_sizes"
path = "src/bin/fetch_sizes.rs"

[dependencies]
eframe      = { version = "0.27", features = ["default"] }
egui        = "0.27"
reqwest     = { version = "0.12", features = ["blocking", "stream"] }
scraper     = "0.19"
shellexpand = "3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rfd         = "0.14"
md5         = "0.7"
zstd        = "0.13"
libc        = "0.2"
once_cell   = "1"
rayon       = "1"

# CLI binary deps (also available to main binary for shared code)
clap        = { version = "4", features = ["derive"] }
ratatui     = "0.28"
crossterm   = "0.28"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[profile.release]
opt-level = 3
lto       = true
strip     = true
